--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             </a>
         </div>
         <div class="card col-lg-4 m-2" style="border-radius: 30px;">
-            <a href="https://www.instagram.com/ikalnazarie_/?hl=id" target="_blank" style="text-decoration:none; color:black">
+            <a href="https://www.facebook.com/iqbal.ardiansyah.184007" target="_blank" style="text-decoration:none; color:black">
                <div class="card-body">
-                <img src="https://cdn-icons-png.flaticon.com/512/145/145802.png"  align="left" style="width: 30px;">ig
+                <img src="https://cdn-icons-png.flaticon.com/512/145/145802.png"  align="left" style="width: 30px;">Facebook
                </div>
             </a>
         </div>
