--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <figcaption> IQBAL ARDIANSYAH</figcaption>
         <p>hai,nama saya iqbal ardiansyah.ini adalah biodata saya,kunjungi sekarang</p>
         <div class="card col-lg-4 m-2" style="border-radius: 30px;">
-            <a href="https://www.instagram.com/iqbalardnsyh27/" target="_blank" style="text-decoration:none; color:black">
+            <a href="https://instagram.com/bal.ardnsyh?utm_source=qr&igshid=MzNlNGNkZWQ4Mg==" target="_blank" style="text-decoration:none; color:black">
                <div class="card-body">
                 <img src="https://cdn-icons-png.flaticon.com/512/3955/3955024.png" align="left" style="width: 30px;">Instagram
                </div>
